<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DressMeUp</string>
    <string name="action_settings">Settings</string>
    <string name="none"></string>
    <string name="captureCodeActivity_message">Direct your camera at the QR Code, ensuring it is within the target rectangle, and hold for a few seconds.</string>
    <string name="capturePhotoActivity_message">Direct your camera at the product and press the Take Picture button.</string>
    <string name="displayDescriptionActivity_message">Click Share button to share product with your friends!</string>
    <string name="confirmPhotoActivity_message">Click Share button to share photo with your friends!</string>
    <string name="savedItemsActivity_message">Browse through saved items. Click on item to view it!</string>
    <string name="findShopsActivity_message">Those are shops in your area. Click on marker to view shop details.</string>
    
    <string name="errorDialog_title">Error</string>
    
    <string name="message_capturedPhotoNotPassed">Internal error: captured photo not passed</string>
    
    <string name="buttonTakePhoto_label">TAKE PHOTO</string>
    <string name="buttonShare_label">SHARE</string>
    <string name="buttonCoupon_label">COUPON</string>
    <string name="buttonBack_label">BACK</string>
    <string name="buttonPostMessage_label">POST MESSAGE</string>
    <string name="buttonSkip_label">SKIP</string>
    <string name="buttonScanCode_label">SCAN CODE</string>
    <string name="buttonHelp_label"></string>
    <string name="buttonEditMessage_label">EDIT MESSAGE</string>
    <string name="buttonSavedItems_label">SAVED ITEMS</string>
    <string name="buttonSave_label">SAVE</string>
    <string name="buttonExit_label">EXIT</string>
    <string name="buttonDebugNext_label">DEBUG: NEXT</string>
    <string name="buttonFacebook_label">FACEBOOK</string>
    <string name="buttonInstantgram_label">INSTANTGRAM</string>
    <string name="buttonTwitter_label">TWITTER</string>

</resources>