<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:keepScreenOn="true" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/layout_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/findShopsActivity_message"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_background"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/findShopsActivity_buttonBack"
            style="@style/style_menubutton"
            android:drawableTop="@drawable/ic_menu_revert"
            android:text="@string/buttonBack_label" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:background="@drawable/layout_background_inner_white"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- Whatever your body is -->

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/none"
            android:src="@drawable/shops_map" />
    </FrameLayout>

</RelativeLayout>