<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:keepScreenOn="true" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/layout_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/capturePhotoActivity_message"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_background"
        android:gravity="center" >

        <Button
            android:id="@+id/capturePhotoActivity_buttonBack"
            style="@style/style_menubutton"
            android:drawableTop="@drawable/ic_menu_revert"
            android:text="@string/buttonBack_label" />

        <Button
            android:id="@+id/capturePhotoActivity_buttonTakePhoto"
            style="@style/style_menubutton"
            android:drawableTop="@drawable/ic_menu_camera"
            android:text="@string/buttonTakePhoto_label" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:background="@drawable/layout_background_inner_black"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- Whatever your body is -->

        <SurfaceView
            android:id="@+id/capturePhotoCameraPreviewSurfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.axisapplications.dressme.view.CameraPreviewDecoratorView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</RelativeLayout>